# aws-encryption-sdk-c

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SUPPORT_POLICY.rst  VERSIONING.rst  architecture.md  buildspec.yml  cppcheck.sh  reformat.sh  switch-private-submodules  valgrind.suppressions  versions
.cbmc-batch/: .gitignore  NOTICES  README.md  cbmc-batch.sh  check_result.py  cipher_ctx_stubs.c  cipher_proofs.c  hdr_zeroize.c  header_proofs.c  key_stubs.c  openssl_cipher_proofs.c  proof_helpers.h
.github/: dependabot.yml
aws-encryption-sdk-cpp/: CMakeLists.txt  README.md
aws-encryption-sdk-cpp/include/aws/cryptosdk/: kms_c_master_key.h  kms_keyring.h
aws-encryption-sdk-cpp/include/aws/cryptosdk/cpp/: exports.h  kms_keyring.h  kms_mrk_keyring.h
aws-encryption-sdk-cpp/include/aws/cryptosdk/private/: cpputils.h  kms_keyring.h  kms_mrk_keyring.h  kms_shim.h
aws-encryption-sdk-cpp/source/: cpputils.cpp  kms_c_master_key.cpp  kms_keyring.cpp  kms_mrk_keyring.cpp  kms_shim.cpp
aws-encryption-sdk-cpp/tests/data/: commitment_known_answer_tests.json
aws-encryption-sdk-cpp/tests/integration/: t_commitment_known_answer.cpp  t_integration_kms_c_mk.cpp  t_integration_kms_keyring.cpp  t_max_encrypted_data_keys.cpp
aws-encryption-sdk-cpp/tests/lib/: credential_reusing_client_supplier.cpp  credential_reusing_client_supplier.h  edks_utils.cpp  edks_utils.h  exports.h  kms_client_mock.cpp  kms_client_mock.h  kms_shim_mock.cpp  kms_shim_mock.h  logutils.h
aws-encryption-sdk-cpp/tests/test_vectors/: static_test_vectors.cpp
aws-encryption-sdk-cpp/tests/unit/: t_cpputils.cpp  t_kms_c_master_key.cpp  t_kms_keyring.cpp  t_kms_mrk_keyring.cpp  t_kms_shim.cpp
cbmc-ci/: ci-config.yaml
cmake/: AwsCFlags.cmake  AwsCryptosdkCFlags.cmake  CodeCoverageFlags.cmake  CodeCoverageTargets.cmake  GitRevision.cmake  InstallLogic.cmake  (+3 more)
codebuild/test-install-project/: CMakeLists.txt  README.md  test.c
codebuild/test-install-project-cpp/: CMakeLists.txt  README.md  test.cpp
examples/: CMakeLists.txt  build_osx.sh  cache_encrypt_decrypt.cpp  caching_cmm.cpp  cleanup.bat  cleanup.sh  file_encrypt_decrypt.cpp  file_streaming.cpp  kms_discovery.cpp  kms_multi_region_keys.cpp  multi_keyring.cpp  raw_aes_encrypt_decrypt.c  raw_aes_keyring.c  raw_rsa_encrypt_decrypt.c  raw_rsa_keyring.c  string.cpp  string_alternate_algorithm_suite.cpp  string_encrypt_decrypt.cpp  string_legacy_compatibility.cpp
examples/example_data/: aes_256_key  hello_world.txt  rsa_private_key.pem  rsa_public_key.pem
tests/: CMakeLists.txt  decrypt.c  decryption_vectors.c  runner.c  t_buffer.c  t_cipher.c  t_header.c  t_materials.c  testing.h
tests/TestVectors/: .clang-format-ignore  .gitignore  Makefile  base64.cpp  base64.h  do_decrypt.cpp  do_encrypt.cpp  json.h  parse_encrypt.cpp  parse_keys.cpp  test_vectors.cpp  test_vectors.h
tests/TestVectors/from-dafny/: decrypt-manifest.json  encrypt-manifest.json  keys.json
tests/TestVectors/from-dafny/ciphertexts/: 005115f4-9bc3-4f48-b474-cfc4540c2de8  00556911-5eb7-47fc-b48a-950b09fe4a53  01e03cff-8fd3-4555-a018-1d298020049e  01fc3c3d-ef5d-4a79-8a83-e2606b529797  023e0771-c7ce-439e-8f1d-940983badcb0  0287cda4-d437-4e70-b93d-55a00b7ac0df  02fb259c-1bb8-4d2d-a966-b64cf08df304  038e5e7a-1f5c-4d84-9ebe-afeb2b6a6a38  03ad6259-136f-4b14-b526-50505d072222  04139111-96d5-4006-9008-6e5b31c2f977  0423541b-0ff2-46a1-9a80-7975d9c9cb25  0485f8c5-5495-4609-aa73-0653fdd9cd27  04f96c68-05ae-410c-ba06-f9c86c8539fa  06ec2021-41ab-47bb-ae5c-1d009422d47c  06f2224a-a847-49dc-b1e4-60d633b16c86  0719f9b3-ec3a-4d21-bfc5-c36e89ba1a0b  082ba430-7ada-4b72-baee-b9a5dbe75b0f  08388b35-5d14-4749-aa9c-f7d01a1d0abf  0866749e-391c-4d7d-b5c2-7a87938640ef  08b0f355-12f6-4a0e-9b54-8a9bf6abc140  08ca097e-2cc3-484e-963d-73db96810e22  08ef51f6-7f13-4929-bc63-07b6e091dd79  0940ba00-e1ae-421b-b66c-d81c23f4f74c  0a72f5c3-e849-4dc5-81cd-e1ef426f6109  0a8cc53b-5092-42b7-88d4-feb722ffba78  0b199aca-030b-4d4a-986f-34e6c80d5659  0cfd939f-9aeb-4c00-8862-234d481e62f1  0d437222-38b5-4fd5-9078-3c32af76fa5a  0dfec901-d854-4b79-ac16-02a9670b7615  0ed38a85-93ed-4ec7-bc96-b6a87e7a45aa  0ee133c1-7e81-4d9f-a0a1-b93fe7fc590d  0f62dbe7-a959-45d9-a7a2-57ca2cd0ae16  0ffe3232-c1ae-426f-b1e0-ca9b71e03280  10872da1-cb73-43fb-81ff-7472adbcd7b8  10e05224-c073-43eb-91bf-e45e5d386322  10e75848-e9c3-45b7-8bd0-7d8740fa1c30  1128f20a-2d0e-4a23-a7df-cef2d5ca5732  11512b23-8ce3-459a-a2f6-b6f22fc03f95  1151f23e-45fc-4af2-85a1-4ac88cdd51bd  13a37910-2394-4f59-8cc8-4207acb1b546  (+447 more)
tests/TestVectors/from-dafny/plaintexts/: small
tests/data/: bad_commitment.pt  good_commitment.pt
tests/integration/: t_encrypt_compat.c  t_encrypt_compat.cpp  t_local_cache_threading.c  test_crypto.h
tests/lib/: bad_cmm.c  bad_cmm.h  counting_keyring.c  counting_keyring.h  counting_kr.c  counting_kr.h  counting_mk.c  counting_mk.h  raw_aes_keyring_test_vectors.c  raw_aes_keyring_test_vectors.h  raw_aes_kr_test_vectors.c  raw_aes_kr_test_vectors.h  raw_aes_mk_test_vectors.c  raw_aes_mk_test_vectors.h  raw_rsa_keyring_test_vectors.c  raw_rsa_keyring_test_vectors.h  test_keyring.c  test_keyring.h  testutil.c  testutil.h  zero_keyring.c  zero_keyring.h  zero_kr.c  zero_kr.h  zero_mk.c  zero_mk.h
tests/unit/: bad_cmm.c  bad_cmm.h  cache_test_lib.c  cache_test_lib.h  runner.c  t_caching_cmm.c  t_cipher.c  t_commitment.c  t_commitment_vectors.inc  t_enc_context.c  t_enc_ctx.c  t_encrypt.c  t_framefmt.c  t_header.c  t_hkdf.c  t_keyring_trace.c  t_local_cache.c  t_materials.c  t_max_encrypted_data_keys.c  t_multi_keyring.c  t_multi_kr.c  t_multi_mkp.c  t_raw_aes_keyring_decrypt.c  t_raw_aes_keyring_encrypt.c  t_raw_aes_keyring_key_name.c  t_raw_aes_keyring_provider_info.c  t_raw_aes_kr_decrypt.c  t_raw_aes_kr_encrypt.c  t_raw_aes_kr_provider_info.c  t_raw_aes_mk.c  t_raw_aes_mk_decrypt.c  t_raw_aes_mk_encrypt.c  t_raw_aes_mk_provider_info.c  t_raw_rsa_keyring_decrypt.c  t_raw_rsa_keyring_encrypt.c  t_signature.c  t_trailing_sig.c  t_version.c  testing.h  zero_mk.c  (+3 more)
(+1314 files in other folders)
